--- a/NICE Guidelines/NICE Guidelines/NICE Guidelines-Info.plist
+++ b/NICE Guidelines/NICE Guidelines/NICE Guidelines-Info.plist
@@ -9,7 +9,25 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFiles</key>
-	<array/>
+	<array>
+		<string>appicon.png</string>
+		<string>appicon@2x.png</string>
+		<string>NICE icon iOS 72.png</string>
+	</array>
+	<key>CFBundleIcons</key>
+	<dict>
+		<key>CFBundlePrimaryIcon</key>
+		<dict>
+			<key>CFBundleIconFiles</key>
+			<array>
+				<string>appicon.png</string>
+				<string>appicon@2x.png</string>
+				<string>NICE icon iOS 72.png</string>
+			</array>
+			<key>UIPrerenderedIcon</key>
+			<false/>
+		</dict>
+	</dict>
 	<key>CFBundleIdentifier</key>
 	<string>Open-Health-Care-UK.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
