Sorted out issues with search overwriting FRC and displaying no results

--- a/NICE Guidelines/NICE Guidelines/NICE Guidelines-Info.plist
+++ b/NICE Guidelines/NICE Guidelines/NICE Guidelines-Info.plist
@@ -29,7 +29,7 @@
 		</dict>
 	</dict>
 	<key>CFBundleIdentifier</key>
-	<string>uk.org.openhealthcare.nice</string>
+	<string>uk.org.openhealthcare.niceguidelines</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
