Updated the default SQLite file

--- a/NICE Guidelines/NICE Guidelines/user_info.plist
+++ b/NICE Guidelines/NICE Guidelines/user_info.plist
@@ -3,10 +3,8 @@
 <plist version="1.0">
 <dict>
 	<key>current_version</key>
-	<date>2012-03-19T08:56:51Z</date>
+	<date>2012-09-10T12:57:52Z</date>
 	<key>favourites</key>
-	<array>
-		<string>Hypertension</string>
-	</array>
+	<array/>
 </dict>
 </plist>
