--- a/NICE Guidelines/NICE Guidelines/NICE Guidelines-Info.plist
+++ b/NICE Guidelines/NICE Guidelines/NICE Guidelines-Info.plist
@@ -13,6 +13,7 @@
 		<string>appicon.png</string>
 		<string>appicon@2x.png</string>
 		<string>NICE icon iOS 72.png</string>
+		<string>appiconretpad.png</string>
 	</array>
 	<key>CFBundleIcons</key>
 	<dict>
@@ -23,9 +24,10 @@
 				<string>appicon.png</string>
 				<string>appicon@2x.png</string>
 				<string>NICE icon iOS 72.png</string>
+				<string>appiconretpad.png</string>
 			</array>
 			<key>UIPrerenderedIcon</key>
-			<false/>
+			<true/>
 		</dict>
 	</dict>
 	<key>CFBundleIdentifier</key>
@@ -37,17 +39,31 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0.1</string>
+	<string>1.1.0</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1.0.1</string>
+	<string>1.1.0</string>
 	<key>LSRequiresIPhoneOS</key>
+	<true/>
+	<key>UIPrerenderedIcon</key>
 	<true/>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
 	</array>
+	<key>UIStatusBarStyle</key>
+	<string>UIStatusBarStyleBlackOpaque</string>
+	<key>UIStatusBarTintParameters</key>
+	<dict>
+		<key>UINavigationBar</key>
+		<dict>
+			<key>Style</key>
+			<string>UIBarStyleBlack</string>
+			<key>Translucent</key>
+			<false/>
+		</dict>
+	</dict>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
